force-app/main/default/objects/CRMforNonProfit__Transaction_Sync__c/CRMforNonProfit__Transaction_Sync__c.object-meta.xml
<CustomObject>
    <label>Transaction Sync</label>
    <nameField>
        <label>Transaction Sync Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Syncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>