force-app/main/default/objects/CRMforNonProfit__Transaction_Sync__c/fields/CRMforNonProfit__Mapping__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Mapping__c</fullName>
    <label>Mapping</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Source_Account_Number__c,Transaction_Amount__c,Transaction_Date__c</fullName>
                <label>Source Account, Amount, Date</label>
            </value>
            <value>
                <fullName>Source_Account_Number__c,Transaction_Amount__c,Transaction_Date__c,Variable__c</fullName>
                <label>Source Account, Amount, Date, Variable</label>
            </value>
            <value>
                <fullName>Transaction_External_Id__c</fullName>
                <default>true</default>
                <label>Transaction Id</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>