force-app/main/default/objects/CRMforNonProfit__Transaction_Sync__c/fields/CRMforNonProfit__Source_API__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Source_API__c</fullName>
    <label>Source API</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSAS - Accounts API</fullName>
            </value>
            <value>
                <fullName>CSAS - Databanking API</fullName>
            </value>
            <value>
                <fullName>Fio - API Banking</fullName>
            </value>
            <value>
                <fullName>UniCredit - Business Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>