force-app/main/default/objects/CRMforNonProfit__Transaction_Sync__c/fields/CRMforNonProfit__Sync_From__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Sync_From__c</fullName>
    <label>Sync From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>